--- a/upload-page/css/bootstrap.css
+++ b/upload-page/css/bootstrap.css
@@ -5118,15 +5118,41 @@ a.badge:hover {
 body {
   padding-top: 0px;
   padding-bottom: 40px;
-  background-color: #a1c782;
+  background-color: #f7f7f7;
+  background-image: url('../img/paper/paper.png');
 }
 .top-bar {
-  background-color: #f7f7f7;
   height: 100px;
   margin-bottom: 15px;
   padding-top: 15px;
   padding-bottom: 10px;
-  padding-left: 50px;
+}
+.upload-region {
+  background-color: #a1c782;
+  text-align: center;
+  color: #ffffff;
+  padding-bottom: 15px;
+}
+.upload-region .header1 {
+  font-size: 40px;
+  line-height: 1;
+  margin: 10px;
+}
+.upload-region .instruction-box {
+  text-align: left;
+  background-color: #a1c782;
+  color: #ffffff;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
+  padding: 2px 10px;
+  height: 120px;
+  border: 1px solid #ddd;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+  margin-bottom: 15px;
 }
 .flyleaf-pov {
   background-color: #eeeeee;
@@ -5138,30 +5164,14 @@ body {
   -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
   text-align: center;
-}
-.flyleaf-pov .instruction-box {
-  text-align: left;
-  background-color: #f7f7f7;
-  padding: 11px 19px;
-  height: 150px;
-  border: 1px solid #ddd;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
-  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
-  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+  height: 240px;
+  padding-top: 90px;
 }
 .flyleaf-pov .top-large-space {
   margin-top: 15px;
 }
 .flyleaf-pov .bottom-large-space {
   margin-bottom: 15px;
-}
-.flyleaf-pov .header1 {
-  font-size: 40px;
-  line-height: 1;
-  margin: 10px;
 }
 .btn-upload {
   color: #ffffff;
