--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,83 @@
-<h1>Flyleaf</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>flyleaf</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Le styles -->
+    <link href="/css/bootstrap.css" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!-- Fav and touch icons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
+      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
+                    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
+                                   <link rel="shortcut icon" href="../assets/ico/favicon.png">
+  </head>
+
+  <body>
+  <div class="row-fluid">
+	<div class="span12 top-bar">
+	  <div class = "container"><img src="/img/flyleaf_logo.png"></div>
+	</div>
+  </div>
+	
+  <div class = "row-fluid"> 
+	<div class="span12 upload-region">
+
+	  <div class = "container">		
+		<div class = "header1">Start sharing your content in three easy steps!</div>
+		<div class="row-fluid">
+	      <div class="span4 instruction-box">
+	        <h2>Step 1</h2>
+	        <p>Click on the upload content button below.</p>
+	      </div>
+	      <div class="span4 instruction-box">
+	        <h2>Step 2</h2>
+	        <p>Select the content you want to share. </p>
+	      </div>
+	      <div class="span4 instruction-box">
+	        <h2>Step 3</h2>
+	        <p>We will give you a URL link to your content that you can share with your friends.</p>
+		  </div>
+		</div>
+		<div class = "row-fluid">
+		  <div class = "span1"></div>
+	 	  <div class = "span10 flyleaf-pov">
+			<%= form_tag({:action => :upload}, :multipart => true) do %>
+ 			  <%= file_field_tag 'epub', :onchange => 'submit();' %>
+			  <button type='submit' class="btn btn-upload btn-large top-large-space bottom-large-space">Upload</a>
+			<% end %>
+		  </div>
+		  <div class = "span1"></div>
+		</div>
+	  </div>
+
+	  </div>
+	</div>
+
+    <hr>
+	<div class ="container">
+
+      <footer>
+        <p>&copy; flyleaf.me 2013</p>
+      </footer>
+	</div>
+
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="/js/jquery-1.8.3.min.js"></script>
+    <script src="/js/bootstrap.js"></script> 
+
+  </body>
+</html>
