--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -5123,6 +5123,13 @@ body {
   font-family: "Ubuntu", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #555555;
 }
+a {
+  color: #81562c;
+}
+a:hover {
+  text-decoration: none;
+  color: #614931;
+}
 .top-bar {
   height: 80px;
   padding-top: 15px;
@@ -5217,7 +5224,7 @@ body {
 #cta a {
   width: 320px;
   display: block;
-  background: #7abe63;
+  background: #82be51;
   margin: 0 auto;
   color: #fff;
   padding: 30px 0;
@@ -5229,10 +5236,10 @@ body {
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
-  -webkit-box-shadow: 0px 2px 0px 0px #3e9b20;
-  -moz-box-shadow: 0px 2px 0px 0px #3e9b20;
-  box-shadow: 0px 2px 0px 0px #3e9b20;
-  text-shadow: 0px 1px #3e9b20;
+  -webkit-box-shadow: 0px 2px 0px 0px #5d8e35;
+  -moz-box-shadow: 0px 2px 0px 0px #5d8e35;
+  box-shadow: 0px 2px 0px 0px #5d8e35;
+  text-shadow: 0px 1px #5d8e35;
 }
 #cta a:hover {
   text-decoration: none;
@@ -5260,11 +5267,16 @@ body {
 }
 #success p {
   margin-top: 20px;
+  font-size: 18px;
   font-weight: 400;
   font-family: "Ubuntu Condensed", serif;
 }
 #success p a {
-  color: #5d8e35;
+  padding: 0 10px;
+}
+#success p a i {
+  font-size: 24px;
+  color: #555555;
 }
 /*** MAIN CONTENT ****/
 #maincontent {
@@ -5327,19 +5339,7 @@ body {
 #footer h4 i {
   font-size: 10px;
   margin: 0 10px;
-  color: #81562c;
-}
-.footericon {
-  color: #7abe63;
-  font-size: 36px;
-  margin-bottom: 15px;
-}
-.footericon a {
-  color: #7abe63;
-}
-.footericon a:hover {
-  color: #3e9b20;
-  text-decoration: none;
+  color: #5d8e35;
 }
 #footer p {
   font-size: 10px;
