--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -5250,8 +5250,8 @@ a:hover {
   background-color: #fff;
   background-image: url('../img/paper/paper.png');
   margin-top: 20px;
-  padding: 20px 0;
-  height: 300px;
+  padding-top: 20px;
+  padding-bottom: 50px;
 }
 #books-container h4 {
   font-weight: 400;
@@ -5284,7 +5284,7 @@ a:hover {
   float: left;
   width: 116px;
   height: 180px;
-  margin: 0 30px 0 0;
+  margin: 0 30px 30px 0;
 }
 .browse_grid_item:hover .lateral_nav_link {
   color: #333333;
